<resources>
    <string name="app_name">Cultravel</string>
    <string name="textBtnSearch">Procurar</string>
    <string name="textItLocalidade">Leiria</string>
    <string name="imglogocultravel">imgLogoCultravel</string>
    <string name="email">Email</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="login">Login</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="registar">Registar</string>
    <string name="home">HOME</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="contactos">CONTACTOS</string>
    <string name="sobre_nos">SOBRE NÓS</string>
    <string name="ndOpen">Abrir</string>
    <string name="ndClose">Fechar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="editar_registo">Editar Registo</string>
    <string name="primNomeInvalido">Primeiro Nome Inválido</string>
    <string name="ultimoNomeInvalido">Último Nome inválido</string>
    <string name="dtaNascInvalida">Data de Nascimento Inválida</string>
    <string name="nomeInvalido">Nome inválido!</string>
    <string name="emailInvalido">Email Inválido!</string>
    <string name="assuntoInvalido">Assunto Inválido!</string>
    <string name="mensagemInvalida">Mensagem Inválida</string>
</resources>

