<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/design_sem_nome__6_"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/ivLogoCultravel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/imglogocultravel"
        app:srcCompat="@drawable/seta_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/registar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNomeContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/primeiro_nome"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etUltimoNomeRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Último Nome"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDataNascimentoRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:hint="Data de Nascimento"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/etNomeUtilizadorRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Nome de Utilizador"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmailRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPasswordRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/palavra_passe"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etConfirmarPasswordRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Confirmar Palavra-Passe"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etMoradaRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Morada"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etLocalidadeRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Localidade"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtnMasculinoRegisto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="Masculino"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp"
                android:buttonTint = "#FFFFFF"/>

            <RadioButton
                android:id="@+id/rbtnFemininoRegisto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="Feminino"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp"
                android:buttonTint = "#FFFFFF"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#C86D51"
                android:text="@string/login"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1" />

</LinearLayout>
