<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/design_sem_nome__6_"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/ivLogoCultravel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/imglogocultravel"
        app:srcCompat="@drawable/seta_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/registar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPrimeiroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/primeiro_nome"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etUltimoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Último Nome"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDtaNascimento"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="Data de Nascimento"
                android:inputType="date"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/background_light"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/etNomeUtilizador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Nome de Utilizador"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/palavra_passe"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etConfirmarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Confirmar Palavra-Passe"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etMorada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Morada"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etLocalidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Localidade"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Distrito"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/background_light"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtnMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:buttonTint="#FFFFFF"
                android:checked="false"
                android:text="Masculino"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />


            <RadioButton
                android:id="@+id/rbtnFeminino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:buttonTint="#FFFFFF"
                android:checked="false"
                android:text="Feminino"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#C86D51"
                android:text="@string/registar"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1" />

</LinearLayout>
